--- a/public/purchase.css
+++ b/public/purchase.css
@@ -1,4 +1,4 @@
-body {
+.checkout {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -15,9 +15,10 @@ body {
     display: flex;
     flex-direction: column;
     width: 400px;
-    height: 112px;
+    height: 200px;
     border-radius: 6px;
     justify-content: space-between;
+    padding-top: 40px;
   }
   .product {
     display: flex;
@@ -25,6 +26,7 @@ body {
   .description {
     display: flex;
     flex-direction: column;
+    height: '500px';
     justify-content: center;
   }
   p {
@@ -63,6 +65,7 @@ body {
   }
   #checkout-button {
     height: 36px;
+    margin-right: 200px;
     background: #556cd6;
     color: white;
     width: 100%;
